[project]
name = "homeassistant-moultrie"
version = "0.1.0"
description = "Moultrie Mobile integration for Home Assistant"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "homeassistant.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "voluptuous.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
    "D",
    "ANN",
    "T20",
]
ignore = [
    "D100",
    "D104",
    "D203",
    "D213",
    "ANN101",
    "ANN102",
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.moultrie"]
